examples/test/testpolicy7326.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7326
  namespace: namespace189
spec:
  podSelector:
    matchLabels:
      key8: value5
      key26: value31
      key49: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value37
          key33: value49
      podSelector:
        matchLabels:
          key33: value27
          key14: value0
